--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                     <h3> Codebucket Solutions Pvt. Ltd</h3>
                                     <h4>Patna, Bihar , India</h4>
                                     <h5>Graphic Designer</h5>
-                                    <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
+                                    <p>One of the most rewarding aspects of my first experience in graphic designing technology was the sense of empowerment that came with seeing my designs come to fruition. </p>
                                 </div>
                             </div>
                         </div>
