--- a/index1.html
+++ b/index1.html
@@ -58,7 +58,7 @@
 
                             <div class="col-md-6">
                                 <div class="edu-col">
-                                    <span><h3><a href="#">Upload General File.</a></h3></span>
+                                    <span><h3><a href="https://script.google.com/a/~/macros/s/AKfycby6QlpA4mC8skLfoVI0uCLJ4yjh9oPodfO1wPw3weMrj7G27LI-2lHBZIDRNz98iPn1WQ/exec">">Upload General File.</a></h3></span>
                                    
                                     <p>Files uploaded through this link is only access by Deepak Sharma.</p>
                                 </div>
