--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     </nav>
                 </div>
                 <div class="sidebar-footer">
-                    <a href="https://freewebsitecode.com/"><i class="fab fa-twitter"></i></a>
-                    <a href="https://facebook.com/freewebsitecode"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://www.youtube.com/channel/UC9HlQRmKgG3jeVD_fBxj1Pw/videos"><i class="fab fa-youtube"></i></a>
+                    <a href="https://x.com/Deepaks97485770"><i class="fab fa-twitter"></i></a>
+                    <a href=""><i class="fab fa-facebook-f"></i></a>
+                    <a href=""><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="content">
