--- a/GuestsD.html
+++ b/GuestsD.html
@@ -155,7 +155,6 @@ const users = [
   { name: 'HAJARI SINGH', amount: 101, address: 'Babuiya', gifts: 'N' },
   { name: 'RAJENDRA SINGH', amount: 105, address: 'Babuiya', gifts: 'N' },
 
-
   { name: 'GUDDU SHARMA', address:'Lacchumanwa ', amount:251, gifts: 'saree set', Image: 'image12.jpg' },
   { name: 'HARIKISHOR THAKUR ', address: 'Ramgarhwa kata ', amount: 251, gifts: 'N', Image: 'image12.jpg' },
   { name: 'DHARMENDRA SINGH  SARPANCH ', address: ' Parsauna tapsi ', amount: 105, gifts: 'N', Image: 'image12.jpg' },
@@ -176,14 +175,12 @@ const users = [
   { name: 'UMA THAKUR', address: 'Gad bahauri', amount: 101, gifts: 'N', Image: 'image12.jpg' },
   { name: 'BISHUNDEV THAKUR', address: 'Dumri mahanawa', amount: 300, gifts: 'saree', Image: 'image12.jpg' },
   { name: 'MAHMUD ASLAM', address: 'Siswaniya', amount: 105, gifts: 'N', Image: 'image12.jpg' },
-
   { name: 'DEEPAK KUMAR MAHTO', address: 'Pipra debe', amount: 251, gifts: 'suitcase', Image: 'image12.jpg' },
   { name: 'SINGHASHAN MAHTO', address: 'Pipra dube', amount: 351, gifts: 'N', Image: 'image12.jpg' },
   { name: 'BISHUNDEV MAHTO', address: 'Pipra dube', amount: 251, gifts: 'N', Image: 'image12.jpg' },
   { name: 'AMIN GADDI', address: 'Siswaniya', amount: 200, gifts: 'N', Image: 'image12.jpg' },
   { name: 'GYANCHAN MAHTO', address: 'Babuiya', amount: 101, gifts: 'N', Image: 'image12.jpg' },
   { name: 'HADIS GADDI', address: 'Babuiya', amount: 100, gifts: 'N', Image: 'image12.jpg' },
-
   { name: 'DINESH SINGH', address: 'Parsauna tapsi', amount: 110, gifts: 'N', Image: 'image12.jpg' },
   { name: 'SAGIR AHMED GADDI', address: 'Babuiya', amount: 100, gifts: 'N', Image: 'image12.jpg' },
   { name: 'SHIVSHUDAN GIRI', address: 'Parsauna tapsi', amount: 100, gifts: 'N', Image: 'image12.jpg' },
@@ -217,14 +214,27 @@ const users = [
   { name: 'MUNNA SHARMA', address: 'Kowbarwa', amount: 502, gifts: 'N', Image: 'image12.jpg' },
   { name: 'DR.AMAR SINGH', address: 'Babuiya', amount: 100, gifts: 'N', Image: 'image12.jpg' },
   { name: 'RANGILA SINGH', address: 'Babuiya', amount: 100, gifts: 'N', Image: 'image12.jpg' },
-
-
   { name: 'HARISANKAR THAKUR', address:'Babuiya nauka tola', amount: 101, gifts: 'N', Image: 'image12.jpg' },
   { name: 'RADHA SINGH ', address: 'Babuiya', amount: 100, gifts: 'N', Image: 'image12.jpg' },
   { name: 'HAIDER ALI', address: 'Babuiya', amount: 100, gifts: 'N', Image: 'image12.jpg' },
   { name: 'BRIJ KISHOR YADAV[purb mukhiya]', address: 'Parsauna tapsi', amount: 501, gifts: 'N', Image: 'image12.jpg' },
   { name: 'JITENDRA GIRI', address: 'Parsauna tapsi', amount: 500, gifts: 'N', Image: 'image12.jpg' },
   { name: 'NAWAL SINGH ', address: 'Babiuya', amount: 101, gifts: 'N', Image: 'image12.jpg' },
+    { name: 'MANU SINGH', amount: 151, address: 'Babuiya', gifts: 'N/A' },
+    { name: 'VINAY SINGH', amount: 101, address: 'Babuiya', gifts: 'N/A' },
+    { name: 'GOPICHAN BHAGAT', amount: 100, address: 'Babuiya', gifts: 'N/A' },
+    { name: 'RAJAHUSEN ANSARI', amount: 100, address: 'Babuiya', gifts: 'N/A' },
+    { name: 'LAHWAR BHAGAT', amount: 100, address: 'Babuiya', gifts: 'N/A' },
+    { name: 'BIKRAM BHAGAT', amount: 101, address: 'Babuiya', gifts: 'N/A' },
+    { name: 'VIJAY RAM', amount: 100, address: 'Babuiya', gifts: 'N/A' },
+    { name: 'SULMAN GADDI', amount: 100, address: 'Babuiya', gifts: 'N/A' },
+    { name: 'BIRENDRA SHARMA', amount: 201, address: 'Sikata', gifts: 'N/A' },
+    { name: 'HARILAL PRASAD SHARMA', amount: 300, address: 'Barawat', gifts: 'Saree,saath' },
+    { name: 'HORIL MAHTO', amount: 501, address: 'Kadamwaa', gifts: 'N/A' },
+    { name: 'ACCHAWABAR THAKUR', amount: 501, address: 'Nuniyaa Tola', gifts: 'N/A' },
+    { name: 'SHAMBHU SHARMA', amount: 510, address: 'Siktaa', gifts: 'Saree' },
+    { name: 'CHHATHU THAKUR', amount: 510, address: 'Shripur', gifts: 'N/A' },
+    { name: 'BRIJBIHARI DUBE', amount: 1002, address: 'Laukariaa', gifts: 'N/A' }
 ];
 
 const filterInput = document.getElementById('filter');
