--- a/GuestsD.html
+++ b/GuestsD.html
@@ -90,17 +90,8 @@
 
 <script>
 const users = [
-{ name: "BIPIN SINGH", address: "Babuiyaa", amount: "101", gifts: "N", Image: "images/author1.png" },
-  { name: "PREM KUMAR PASWAN", address: "Bhelaahi", amount: "151", gifts: "N", Image: "images/author1.png" },
-  { name: "KAMESHWAR PRASAD", address: "Ramgarhwa", amount: "155", gifts: "Saree set", Image: "images/author1.png" },
-  { name: "BECHU RAM", address: "Babuiyaa", amount: "201", gifts: "N", Image: "DSC_0302.JPG" },
-  { name: "NAGESHWAR RAM", address: "Babuiyaa", amount: "200", gifts: "N", Image: "DSC_0302.JPG" },
-  { name: "LAL BIHARI MAHTO", address: "Bhelaahi", amount: "151", gifts: "N", Image: "DSC_0302.JPG" },
-  { name: "RAMANAND SHARMA", address: "Gulariyaa", amount: "500", gifts: "Saree set", Image: "images/author1.png" },
-  { name: "RAMBOL THAKUR", address: "Mahanwaa", amount: "500", gifts: "N", Image: "DSC_0302.JPG" },
-  { name: "ACCHELAL SHARMA", address: "Lakshmanwaa", amount: "501", gifts: "Suitecase set", Image: "images/author1.png" },
-  { name: "TUNNU LAL SHARMA", address: "Gahari", amount: "502", gifts: "Saree set", Image: "DSC_0302.JPG" },
-    
+ 
+  { name: 'SHREE THAKUR', amount: 1000, address: 'Gadhwaa Bazaar', gifts: 'N' },
   { name: 'KHUTTI GADDI', address: 'Babuiya', amount: 51, gifts: 'N', Image: 'image1.jpg' },
   { name: 'HAWALDAAR GADDI', address: 'Babuiya', amount: 100, gifts: 'N', Image: 'image2.jpg' },
   { name: 'BUDHAN SINGH', address: 'Babuiya', amount: 100, gifts: 'N', Image: 'image3.jpg' },
@@ -113,8 +104,6 @@ const users = [
   { name: 'HADISH GADDI', address: 'Babuiya', amount: 100, gifts: 'N', Image: 'image10.jpg' },
   { name: 'ISHRAAJ GADDI', address: 'Babuiya', amount: 100, gifts: 'N', Image: 'image11.jpg' },
   { name: 'ISHLAAM GADDI', address: 'Babuiya', amount: 100, gifts: 'N', Image: 'image12.jpg' },
-
-  { name: 'SHREE THAKUR', amount: 1000, address: 'Gadhwaa Bazaar', gifts: 'N' },
   { name: 'JAMDAAR GADDI', amount: 100, address: 'Babuiya', gifts: 'N' },
   { name: 'BIRENDRA SINGH', amount: 100, address: 'Babuiya', gifts: 'N' },
   { name: 'ELIHASH ANSARI', amount: 105, address: 'Babuiya', gifts: 'N' },
@@ -122,7 +111,7 @@ const users = [
   { name: 'FULMAN GADDI', amount: 150, address: 'Babuiya', gifts: 'N' },
   { name: 'DOMA GADDI', amount: 101, address: 'Babuiya', gifts: 'N' },
   { name: 'HARUN GADDI', amount: 121, address: 'East-Babuiya', gifts: 'N' },
-  { name: 'JAGAT SHARMA', amount: 1001, address: 'Dumri', gifts: '1' },
+  { name: 'JAGAT SHARMA', amount: 1001, address: 'Dumri', gifts: 'Saree set' },
   { name: 'KURESH GADDI', amount: 100, address: 'Babuiya', gifts: 'N' },
   { name: 'FARIYAAD GADDI', amount: 100, address: 'Babuiya', gifts: 'N' },
   { name: 'MUNNI GADDI', amount: 100, address: 'Babuiya', gifts: 'N' },
@@ -131,10 +120,22 @@ const users = [
   { name: 'RAMBALAK SINGH', amount: 252, address: 'Babuiya', gifts: 'N' },
   { name: 'BHANU GADDI', amount: 150, address: 'Babuiya', gifts: 'N' },
   { name: 'MAHMUD ALAM ANSARI', amount: 105, address: 'Babuiya', gifts: 'N' },
+
+  { name: "BIPIN SINGH", address: "Babuiyaa", amount: "101", gifts: "N", Image: "images/author1.png" },
+  { name: "PREM KUMAR PASWAN", address: "Bhelaahi", amount: "151", gifts: "N", Image: "images/author1.png" },
+  { name: "KAMESHWAR PRASAD", address: "Ramgarhwa", amount: "155", gifts: "Saree set", Image: "images/author1.png" },
+  { name: "BECHU RAM", address: "Babuiyaa", amount: "201", gifts: "N", Image: "DSC_0302.JPG" },
+  { name: "NAGESHWAR RAM", address: "Babuiyaa", amount: "200", gifts: "N", Image: "DSC_0302.JPG" },
+  { name: "LAL BIHARI MAHTO", address: "Bhelaahi", amount: "151", gifts: "N", Image: "DSC_0302.JPG" },
+  { name: "RAMANAND SHARMA", address: "Gulariyaa", amount: "500", gifts: "Saree set", Image: "images/author1.png" },
+  { name: "RAMBOL THAKUR", address: "Mahanwaa", amount: "500", gifts: "N", Image: "DSC_0302.JPG" },
+  { name: "ACCHELAL SHARMA", address: "Lakshmanwaa", amount: "501", gifts: "Suitecase set", Image: "images/author1.png" },
+  { name: "TUNNU LAL SHARMA", address: "Gahari", amount: "502", gifts: "Saree set", Image: "DSC_0302.JPG" },
+    
   { name: 'BUDHRAM BHAGAT', amount: 251, address: 'Babuiya', gifts: 'N' },
   { name: 'JAWAHIR RAM', amount: 501, address: 'Babuiya', gifts: 'N' },
   { name: 'KEWAL RAM', amount: 105, address: 'Babuiya', gifts: 'N' },
-  { name: 'KAILESH MAHTO', amount: 101, address: 'Babuiya', gifts: 'N' },
+  { name: 'KAILASH MAHTO', amount: 101, address: 'Babuiya', gifts: 'N' },
   { name: 'SUCKET MAHTO', amount: 101, address: 'Babuiya', gifts: 'N' },
   { name: 'UMESH MAHTO', amount: 101, address: 'Babuiya', gifts: 'N' },
   { name: 'RAIFUL GADDI', amount: 100, address: 'Babuiya', gifts: 'N' },
@@ -144,7 +145,7 @@ const users = [
   { name: 'HASIM ANSARI', amount: 125, address: 'Babuiya', gifts: 'N' },
   { name: 'BABUJAN GADDI', amount: 105, address: 'W-Babuiya', gifts: 'N' },
   { name: 'RAMJEET MAHTO', amount: 101, address: 'Babuiya', gifts: 'N' },
-  { name: 'KALAKTAR SINGH', amount: 251, address: 'Babuiya', gifts: 'N' },
+  { name: 'KALAHTAR SINGH', amount: 251, address: 'Babuiya', gifts: 'N' },
   { name: 'SHIV BAHADUR MAHTO', amount: 111, address: 'Babuiya', gifts: 'N' },
   { name: 'HASMULLAH ANSARI', amount: 100, address: 'Babuiya', gifts: 'N' },
   { name: 'IMAM GADDI', amount: 102, address: 'Babuiya', gifts: 'N' },
