--- a/GuestsD.html
+++ b/GuestsD.html
@@ -182,19 +182,19 @@ const users = [
      { name: 'BIKARAM SHARMA', amount:1005 , address: 'Purainaa,ramnagar', gifts: 'saree' },
     { name: 'NIRAJ SHARMA', amount:510 , address: 'Ramgarhwa kata', gifts: 'saree' },
     { name: 'RAMYAAD SHARMA', amount:512 , address: 'Sitalpur', gifts: 'N/A' },
-    { name: 'CHANDAN SHARMA (New)', amount:, address: 'Sitalpur', gifts: 'N/A' },
+    { name: 'CHANDAN SHARMA (New)', amount:51000, address: 'Sitalpur', gifts: 'N/A' },
     { name: 'CHANDESHWAR SHARMA', amount:501 , address: 'Hirapur', gifts: 'saree' },
-     { name: 'ADYAA THAMUR', amount:551 , address: 'Panchbhidwa', gifts: 'N/A' },
+     { name: 'ADYAA THAKUR', amount:551 , address: 'Panchbhidwa', gifts: 'N/A' },
     { name: 'SHAMBHU THAKUR', amount:602 , address: 'Bardiyahi Ghat', gifts: 'N/A' },
     { name: 'HIRA THAKUR', amount:'500 NC' , address: 'PHULWARIYA', gifts: 'saree' },
     { name: 'NATHU PRASAD THAKUR', amount:'1100 NC' , address: 'Madali', gifts: 'N/A' },
     { name: 'RAVINDRA SHARMA', amount:501 , address: 'Gadhwa Bazar', gifts: 'Suitcase' },
-     { name: 'NATHUNI MIYAA', amount:101 , address: 'Mahodipur', gifts: 'N/A' },
+    { name: 'NATHUNI MIYAA', amount:101 , address: 'Mahodipur', gifts: 'N/A' },
     { name: 'SHANKAR THAKUR', amount:251 , address: 'Mahodipur', gifts: 'saree' },
-    { name: BADRI SHARMA', amount:201 , address: 'Mahodipur', gifts: 'saree' },
+    { name: 'BADRI SHARMA', amount:201 , address: 'Mahodipur', gifts: 'saree' },
     { name: 'MATHURA THAKUR', amount:521 , address: 'Gadhwa Bazar', gifts: 'N/A' },
     { name: 'SHRAWAN SHARMA', amount:301 , address: 'Shikta', gifts: 'N/A' },
-    { name: 'JNGBAHADUR SHARMA', amount:551 , address: 'Bhogadi', gifts: 'Suitcase set' },
+    { name: 'JANGBAHADUR SHARMA', amount:551 , address: 'Bhogadi', gifts: 'Suitcase set' },
     { name: "TUNNU LAL SHARMA", address: "Gahari", amount: "502", gifts: "Saree set", Image: "DSC_0302.JPG" },
     { name: "RAMANAND SHARMA", address: "Gulariyaa", amount: "500", gifts: "Saree set", Image: "images/author1.png" },
     { name: "NAGESHWAR RAM", address: "Babuiyaa", amount: "200", gifts: "N", Image: "DSC_0302.JPG" },
