--- a/GuestsD.html
+++ b/GuestsD.html
@@ -100,6 +100,7 @@
 </style>
 </head>
 <body>
+    <div class="sdata">
     <div class="heading">
         <p id="headingText">Our Registered Guests Details. </p>
     </div>
@@ -115,6 +116,7 @@
             <button class="uplbtn">Upload File</button>
         </a>
     </div>
+   </div>     
     <div id="userList"></div>
 
 <script>
