--- a/GuestsD.html
+++ b/GuestsD.html
@@ -121,9 +121,9 @@
 
 <script>
 const users = [
-{ name: 'SHREE THAKUR', amount: 1000, address: 'Gadhwaa Bazaar', gifts: 'N' },
-  { name: 'KHUTTI GADDI', address: 'Babuiya', amount: 51, gifts: 'N', Image: 'image1.jpg' },
-  { name: 'HAWALDAAR GADDI', address: 'Babuiya', amount: 100, gifts: 'N', Image: 'image2.jpg' },
+{ name: 'SHREE THAKUR', amount: 1000, address: 'Gadhwaa Bazaar', gifts: 'N', Image: 'Deepak1.jpeg' },
+  { name: 'KHUTTI GADDI', address: 'Babuiya', amount: 51, gifts: 'N', Image: 'Deepak2.jpeg' },
+  { name: 'HAWALDAAR GADDI', address: 'Babuiya', amount: 100, gifts: 'N', Image: 'Deepak3.jpeg' },
   { name: 'BUDHAN SINGH', address: 'Babuiya', amount: 100, gifts: 'N', Image: 'image3.jpg' },
   { name: 'SAMSUL HODA GADDI', address: 'Babuiya', amount: 200, gifts: 'N', Image: 'image4.jpg' },
   { name: 'MAJRUL GADDI', address: 'Babuiya', amount: 100, gifts: 'N', Image: 'image5.jpg' },
