--- a/GuestsD.html
+++ b/GuestsD.html
@@ -192,7 +192,7 @@ const users = [
     { name: 'ACCHAWABAR THAKUR', amount: 501, address: 'Nuniyaa Tola', gifts: 'N/A' },
     { name: 'SHAMBHU SHARMA', amount: 510, address: 'Siktaa', gifts: 'Saree' },
     { name: 'CHHATHU THAKUR', amount: 510, address: 'Shripur', gifts: 'N/A' },
-    { name: 'BRIJBIHARI DUBE', amount: 1002, address: 'Laukariaa', gifts: 'N/A' },
+    { name: 'BRIJBIHARI DUBE', amount: 1002, address: 'Laukariaa', gifts: 'N/A', Image: "Brij.png"   },
      { name: 'VASHUDEO THAKUR', amount: 500, address: 'Kisun Majhariya', gifts: 'saree' },
     { name: 'VARANASI THAKUR', amount: 50 , address: 'mahodipur', gifts: 'Dahi,chawal,saath,saree set' },
     { name: 'RAGHUNATH THAKUR(NC)', amount:1000  , address: 'Phulwariya', gifts: 'saree' },
@@ -212,7 +212,7 @@ const users = [
      { name: 'BIKARAM SHARMA', amount:1005 , address: 'Purainaa,ramnagar', gifts: 'saree' },
     { name: 'NIRAJ SHARMA', amount:510 , address: 'Ramgarhwa kata', gifts: 'saree' },
     { name: 'RAMYAAD SHARMA', amount:512 , address: 'Sitalpur', gifts: 'N/A' },
-    { name: 'CHANDAN SHARMA', amount:1 , address: 'Sitalpur', gifts: 'N/A' },
+    { name: 'LALBABU SHARMA', amount:1 , address: 'Sitalpur', gifts: 'N/A', Image: "Lalbabu.png"  },
     { name: 'CHANDESHWAR SHARMA', amount:501 , address: 'Hirapur', gifts: 'saree' },
     { name: 'ADYAA THAKUR', amount:551 , address: 'Panchbhidwa', gifts: 'N/A' },
     { name: 'SHAMBHU THAKUR', amount:602 , address: 'Bardiyahi Ghat', gifts: 'N/A' },
@@ -232,7 +232,7 @@ const users = [
     { name: "LAL BIHARI MAHTO", address: "Bhelaahi", amount: 151, gifts: "N", Image: "DSC_0302.JPG" },
     { name: "BIPIN SINGH", address: "Babuiyaa", amount: 101, gifts: "N", Image: "images/author1.png" },
     { name: "RAMBOL THAKUR", address: "Mahanwaa", amount: 500, gifts: "N", Image: "DSC_0302.JPG" },
-    { name: "KAMESHWAR PRASAD", address: "Ramgarhwa", amount: 155, gifts: "Saree set", Image: "images/author1.png" },
+    { name: "KAMESHWAR PRASAD", address: "Ramgarhwa", amount: 155, gifts: "Saree set", Image: "Kameshwar.png" },
     { name: "BECHU RAM", address: "Babuiyaa", amount: 201, gifts: "N", Image: "DSC_0302.JPG" },
     { name: "ACCHELAL SHARMA", address: "Lakshmanwaa", amount: 501, gifts: "Suitecase set", Image: "images/author1.png" },  
   
