--- a/index1.html
+++ b/index1.html
@@ -116,7 +116,7 @@
 
                             <div class="col-md-6">
                                 <div class="edu-col">
-                                    <span><h3><a href="#">Personal Files Uploading.</a></h3></span>
+                                    <span><h3><a href="https://vahan.parivahan.gov.in/nrservices/faces/user/citizen/citizenlogin.xhtml">Vehicle Registration Details.</a></h3></span>
                                    
                                     <p>Files uploaded through this link is only access by Deepak Sharma.</p>
                                 </div>
@@ -124,7 +124,7 @@
 
                             <div class="col-md-6">
                                 <div class="edu-col">
-                                    <span><h3><a href="#">Personal Files Uploading.</a></h3></span>
+                                    <span><h3><a href="https://bhumijankari.bihar.gov.in/BiharPortal/Admin/AdvCerSearch/AdvSearchCertifiedCopy.aspx">Land Registration Details.</a></h3></span>
                                    
                                     <p>Files uploaded through this link is only access by Deepak Sharma.</p>
                                 </div>
@@ -201,3 +201,4 @@
 
     </body>
 </html>
+
